<resources>
    <string name="app_name">rmt1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Resident</string>
    <string name="origin_name">From</string>
    <string name="origin_type">Place of Origin Type</string>
    <string name="episode_appearances">Episode Appearances</string>
    <string name="artist">Artist</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="search_title">Search Characters</string>
    <string name="rick_and_morty">Rick and Morty</string>
</resources>