<?xml version="1.0" encoding="utf-8"?>
    <layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="characterInfo"
            type="com.example.rmt1.models.CharactersData" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/parentRelative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
                        android:id="@+id/cardImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:orientation="vertical"
                        android:padding="3dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="6dp"
                        card_view:cardBackgroundColor="@android:color/transparent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/character_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:maxHeight="200dp"
                                app:loadImage = "@{characterInfo.image}"
                                android:scaleType="centerCrop"
                                android:transitionName="avatar" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/cardImage"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/cardImage">

                        <TextView
                            android:id="@+id/character_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:gravity="center"
                            android:text="@{characterInfo.name}"
                            android:textColor="#505362"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="Species"
                                android:textColor="#505362"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/character_species"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:text="@{characterInfo.species}"
                                android:textColor="#505362" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/gender"
                                android:textColor="#505362"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/gender"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:text="@{characterInfo.gender}"
                                android:textColor="#505362" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/status"
                                android:textColor="#505362"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/status"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:text="@{characterInfo.status}"
                                android:textColor="#505362" />
                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/current_location"
                        android:textColor="#505362"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_location"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{characterInfo.location.name}"
                        android:textColor="#505362" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_origin_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/origin_name"
                        android:textColor="#505362"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_origin_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{characterInfo.origin.name}"
                        android:textColor="#505362"
                        />
                </LinearLayout>

                <LinearLayout

                    android:id="@+id/layout_origin_dimension"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/episode_appearances"
                        android:textColor="#505362"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_origin_dimension"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{String.valueOf(characterInfo.episode.size)}"
                        android:textColor="#505362" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal"
                    tools:listitem="@layout/customdialogfragment_episode_name_row"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_centerVertical="true"/>


            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </layout>